<resources>
    <string name="app_name">SPIT.Access</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="HomeScreen_action_SignOut">Sign Out</string>
    <string name="LoginSignUp_emailtext">Email</string>
    <string name="LoginSignUp_passwordtext">Password</string>
    <string name="Login_logintext">Login</string>
    <string name="SignUp_signUptext">Sign Up</string>
    <string name="Login_forgotPassword">Forgot Password?</string>
    <string name="Login_signUpIntent">Create new Account</string>
    <string name="Login_forgotPasswordEmail">Your Email Address</string>
    <string name="Login_forgotPasswordButton">Get Email !</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeFragment_Tab1">Tab1</string>
    <string name="HomeFragment_Tab2">Tab2</string>
    <string name="ComputerEngineeringDepartment">Department of Computer Engineering</string>
    <string name="ITEngineeringDepartment">Department of Information Technology</string>
    <string name="EXTCEngineeringDepartment">Department of Electronics and Telecommunication Engineering</string>
    <string name="ETRXEngineeringDepartment">Department of Electronics Engineering</string>
    <string name="ASHEngineeringDepartment">Department of Applied Science and Humanities</string>
    <string name="MCAEngineeringDepartment">Department of Masters in Computer Applications</string>
    <string name="title_activity_department_info">DepartmentInfoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="eventlinkunderlined"><u>Registration Link</u></string>
    <string name="HomeFragmentAboutUsText">The institute is located in 47 acres of green campus at Andheri (W), the fastest growing suburb of Mumbai. The campus also houses four Bhavan’s Institutions of great repute namely Bhavan’s College (the arts, commerce and science college), Sardar Patel College of Engineering – Government aided Engineering college, S.P. Jain Institute of Management and Research, a management institute and A.H. Wadia, higher secondary school.\n\n
In 1957, the Bharatiya Vidya Bhavan conceived the idea of establishing an engineering college in Mumbai. Sardar Patel College of Engineering was inaugurated on 19th August 1962.\n\nIn 1995 self-financed engineering courses were added to it and it functioned as Sardar Patel College of Engineering (Unaided-wing) conducting Electronics Engineering, Computer Engineering and Information Technology Courses and Masters course in Electronics since 2005 till 2008. These courses have earned a great reputation in the field of engineering education, as well as industry. Bharatiya Vidya Bhavan’s Sardar Patel College of Engineering, Unaided Wing was established in its new building under the name and style of Bharatiya Vidya Bhavan’s Sardar Patel Institute of Technology since 2005 and is affiliated to Mumbai University.\n\n<b>University of Mumbai has conferred Autonomous Status to Bharatiya Vidya Bhavans Sardar Patel Institute of Technology, for a period of five years from the academic year 2017-18 to 2021-22 for all UG Programmes.</b></string>
    <string name="HomeFragmentVisionText">Keeping in view the growing and changing needs of Industry and society, we at S.P.I.T. are committed to creating an environment which will raise the intellectual and moral standards of our students. Our endeavor is to strive for the overall development of students, thereby enabling them to accept challenges. In tune with this our vision is\n\n<b>To build a renowned institute which will produce world class graduate engineers with social sensitivity.</b></string>
    <string name="HomeFragmentMissionText"><ol>
        <li>Provide high quality education in engineering and technology promoting the Indian Values and Ethos that will prepare the participants to lead lives of personal integrity and civic responsibility in a global society.\n</li>
        <li>Promote an Educational Environment that combines academic study with the excitement of intellectual curiosity for engineers of tomorrow.\n</li>
        <li>Enhance career opportunities for students through Industry-Institute interaction, value-added courses and projects in cutting edge technology.\n</li>
        <li>Inculcate Entrepreneurial mindset in students to make them job creators.\n</li>
        <li>Focus on applied research to create next generation technologies.</li>
    </ol>  </string>
    <string name="SPTBIAboutText">Bharatiya Vidya Bhavan Sardar Patel Institute of Technology (SPIT) launched Sardar Patel Technology Business Incubator (SP-TBI) with a mission to promote innovation and entrepreneurship by converting technology ideas and innovations into products. SP-TBI is a not-for-profit trust and affiliated to Department of Science and Technology, Govt. of India. Since its inception SP-TBI has incubated 10 startups and is now scaling up activities to support startups through affordable co-working space, incubation support, and development programs which will be accessible to all. These startups in the future are expected to create employment for over 500 professionals and add wealth of approximately 100 Cr in the economy. To achieve its objective, SP-TBI is creating a holistic ecosystem of mentors, resource providers, and partner organizations.
     </string>
    <string name="SPTBIJoinAboutText">Join us in the journey! Help startups win!</string>
    <string name="SPTBIApplyInternship"><u>Apply for Internship</u></string>
    <string name="AboutAppAppDescription">This is the official app for Sardar Patel Institute of Technology (Autonomous), Andheri, Mumbai made with the intention of enabling a digital route to access important information about the college to existing students, teaching and non-teaching staff, and also to outsiders seeking information about the college</string>
</resources>