<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Login_linearLayout"
    android:focusableInTouchMode="true"
    android:padding="8dp">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_logintext"
        android:layout_gravity="center_horizontal"
        />
    
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:id="@+id/Login_emailTextLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginSignUp_emailtext"
            android:id="@+id/Login_emailEditText"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:id="@+id/Login_passwordTextLayout">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginSignUp_passwordtext"
            android:inputType="textPassword"
            android:id="@+id/Login_passwordEditText"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_logintext"
        android:id="@+id/Login_loginInButton"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Login_GoogleSignInButton"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_signUpIntent"
        android:id="@+id/Login_signUpTextView"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_forgotPassword"
        android:id="@+id/Login_forgotPasswordTextView"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:padding="16dp"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/Login_forgotPasswordTextLayout"
        android:visibility="invisible"
        >

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Login_forgotPasswordEmail"
        android:id="@+id/Login_forgotPasswordEditText"
        android:visibility="invisible"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_forgotPasswordButton"
        android:id="@+id/Login_forgotPasswordButton"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        />

</LinearLayout>
</ScrollView>